# hireflow

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260101_0000_0001_initial_schema.py  20260327_0000_0002_automation_pipeline_settings.py  20260327_0001_0003_automation_pipeline_runs.py  20260328_0000_0004_job_postings_user_id.py  20260328_0001_0005_personas.py  20260331_0000_0006_automation_pipeline_enhancements.py  20260404_0000_0007_pipeline_run_soft_delete.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: analytics.py  applications.py  auth.py  autofill.py  automation.py  jobs.py  personas.py  profiles.py  resumes.py
apps/api/app/core/: config.py  exceptions.py  logging.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: models.py
apps/api/app/schemas/: schemas.py
apps/api/app/services/: external_jobs.py  job_ai.py  job_matching.py  resume_parser.py
apps/api/app/tasks/: __init__.py  automation_tasks.py  celery_app.py
apps/api/tests/unit/: test_application_transitions.py  test_automation_workflows.py  test_job_services.py  test_security.py
apps/extension/: manifest.json  package.json  tsconfig.json  webpack.config.js
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
docs/adr/: decisions.md
(+49 files in other folders)
