[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hireflow-api"
version = "0.1.0"
description = "HireFlow FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.8",
    "celery>=5.4.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "boto3>=1.35.32",
    "openai>=1.47.0",
    "python-docx>=1.1.2",
    "weasyprint>=62.3",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
    "factory-boy>=3.3.1",
    "faker>=29.0.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
